# example_modules

./: CMakeLists.txt  README.md
dev_accelerometer/: CMakeLists.txt
dev_accelerometer/api/: accelerometer.py
dev_accelerometer/src/: main.c
drv_accelerometer/: CMakeLists.txt
drv_accelerometer/include/: accelerometer.h
drv_accelerometer/src2virtual/: accelerometer.c
lib_math/: CMakeLists.txt
lib_math/include/: math.h
lib_math/src/: math.c  vetflt.c
linuxprocess/: CMakeLists.txt
linuxprocess/src/: main.cpp
proc_test/: CMakeLists.txt
proc_test/src/: main.c
sensor/: CMakeLists.txt
sensor/include/: sensor.h
sensor/src/: sensor.cpp  sensor_virtual.cpp
thread/: CMakeLists.txt
thread/api/: thread.h
thread/src/: main.cpp
